[gd_scene load_steps=16 format=3 uid="uid://ktebwpssufcb"]

[ext_resource type="Script" path="res://GameObjects/Enemies/BaseEnemy.gd" id="1_p2xtd"]
[ext_resource type="Shader" path="res://VFX/Shaders/SpriteEffects.gdshader" id="2_p4im7"]
[ext_resource type="Texture2D" uid="uid://cytc6hgakmudj" path="res://GameObjects/Enemies/Goblins/GreenGoblin.png" id="3_wmats"]
[ext_resource type="Script" path="res://Components/HealthComponent.gd" id="4_io4u8"]
[ext_resource type="Script" path="res://Components/HurtboxComponent.gd" id="5_fva6s"]
[ext_resource type="Script" path="res://Components/StateMachine/StateMachine.gd" id="6_sp3gs"]
[ext_resource type="Script" path="res://GameObjects/Enemies/States/Moving.gd" id="7_jokq3"]
[ext_resource type="Script" path="res://GameObjects/Enemies/States/SearchTarget.gd" id="7_yqx4p"]
[ext_resource type="Script" path="res://GameObjects/Enemies/States/MeleeAttack.gd" id="8_62cuu"]
[ext_resource type="Script" path="res://GameObjects/Enemies/States/Dead.gd" id="9_mg1s5"]
[ext_resource type="Script" path="res://Components/HitboxComponent.gd" id="9_sas4l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wuita"]
size = Vector2(18, 21)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x351i"]
resource_local_to_scene = true
shader = ExtResource("2_p4im7")
shader_parameter/outline_color = Color(0.698039, 0.780392, 0.764706, 0)
shader_parameter/fill_color = Color(1, 1, 1, 1)
shader_parameter/fill_amount = null
shader_parameter/desaturation = 0.0
shader_parameter/darkness = 1.0
shader_parameter/transparency = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k2uaj"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c7v0s"]
radius = 12.0

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_p2xtd")
attack_cooldown = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_wuita")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_x351i")
texture = ExtResource("3_wmats")

[node name="HealthComponent" type="Node2D" parent="."]
position = Vector2(0, -14)
script = ExtResource("4_io4u8")
max_health = 8.0
hit_numbers = true

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 0
script = ExtResource("5_fva6s")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_k2uaj")

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("base_node", "initial_state")]
script = ExtResource("6_sp3gs")
base_node = NodePath("..")
initial_state = NodePath("SearchTarget")

[node name="SearchTarget" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("7_yqx4p")
next_state = NodePath("../Moving")

[node name="Moving" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("attack_state")]
script = ExtResource("7_jokq3")
attack_state = NodePath("../MeleeAttack")

[node name="MeleeAttack" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("8_62cuu")
return_state = NodePath("../Moving")
attack_duration = 0.33

[node name="HitboxComponent" type="Area2D" parent="StateMachine/MeleeAttack"]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource("9_sas4l")
damage = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/MeleeAttack/HitboxComponent"]
shape = SubResource("CircleShape2D_c7v0s")

[node name="Dead" type="Node2D" parent="StateMachine"]
script = ExtResource("9_mg1s5")
death_knockback = 25.0
